feature - event propagation inside a bounded doamin and between bounded domain